# opengltemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.txt
assets/shaders/fragment/: light.frag  sample.frag
assets/shaders/vertex/: light.vert  sample.vert
engine/: main.cpp
engine/core/: camera.cpp  camera.h  camera.hpp  cube.cpp  cube.h  cube.hpp  gameObject.hpp  mesh.hpp  model.hpp  scene.h  scene.hpp  window.cpp  window.h  window.hpp
engine/utils/: shader.cpp  shader.h  shader.hpp  texture.cpp  texture.h  texture.hpp
